--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,7 +129,9 @@
       <ul class='item-lists'>
         <% @items.each do |item| %>
           <li class='list'>
-          <%= link_to "#" do %>
+          <%# <%= link_to edit_item_path(item.id) do %>
+          <%= link_to root_path do %>
+
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" %>
 
