--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,7 +30,7 @@
     <% end %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <% if user_signed_in? %>
-      <%= link_to "購入画面に進む", buyers_path,class:"item-red-btn"%>
+      <%= link_to "購入画面に進む", item_buyers_path(@item.id),class:"item-red-btn"%>
     <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
